[package]
name = "rpfm_lib"
description = "This crate contains the basic functionality for interacting with Total War files."
license = "MIT"
repository = "https://github.com/Frodo45127/rpfm"
categories = ["games"]
keywords = ["totalwar", "modding"]
readme = "README.md"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

# Basic get/set support.
getset = "^0.1"

# Serialization support.
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

# Compression support.
lzma-rs = "^0"

# Error handling.
thiserror = "^2"

# Decoding/Encoding support.
itertools = "^0.14"
byteorder = "^1.3"
encoding_rs = "^0.8"
bitflags = { version = "^2.3", features = ["std", "serde"]}

# Linear algebra
nalgebra = { version = "^0", features = ["serde-serialize"] }

# F16 support until it gets into std.
half = "^2"

# Quick char search support.
memchr = "^2.5"
